--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@angular/router": "^4.0.0",
     "body-parser": "^1.17.2",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "http": "0.0.0",
     "mongoose": "^4.13.0",
     "parse-glob": "^3.0.4",
     "path": "^0.12.7",
+    "request": "^2.83.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
