--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ SESSION_SECRET=hahaitsajokeifyoucanseethis
 FACEBOOK_CLIENT_ID=1797305620568389
 FACEBOOK_CLIENT_SECRET=d502ba11277cea46157ce1c824ba7d22
 FACEBOOK_CALLBACK_URL=http://localhost:3100/auth/facebook/callback
+MLAB_WEBDEV_USERNAME=ryanix
+MLAB_WEBDEV_PASSWORD=172199
